--- a/style.css
+++ b/style.css
@@ -1,25 +1,13 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
-    margin: 0;
     background-image: url("table.png");
+    background-size: cover;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    background-size: cover;
-}
-
-.div-game {
-    background-image: url("table2.jpg");
     text-align: center;
-    display: table;
-    height: 500px;
-    width: 800px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 20px;
-    border-radius: 10px;
-    box-shadow: 4px 8px 16px black;
+    margin-top: 100px;
 }
 
 h1 {
@@ -30,37 +18,46 @@ h1 {
 
 #message-el {
     font-style: italic;
-    font-size: 1em;
+    font-size: 2rem;
     color: white;
     font-weight: bold;
-    margin-bottom: 10px;
-    margin-top: 55px;
-    padding-bottom: 10px;
+    margin-top: 0px;
 }
 
 button {
     color: #016f32;
     width: 150px;
-    height: 20px;
+    height: 40px;
     background-color: goldenrod;
     border-radius: 5px;
     padding-top: 5px;
     padding-bottom: 0px;
     font-weight: bold;
+    font-size: 1rem;
     border: none;
     margin-bottom: 0px;
     margin-top: 2px;
 }
 
-.player-el {
-    margin-top: 0px;
-    padding-top: 0px;
+.cards-el-div {
+    background-image: url("./table-black-jack.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 600px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .cards {
-    margin-top: 0px;
-    padding-top: 0px;
-    width: 10%;
+    width: 11%;
+}
+
+.div-btn {
+    display: flex;
+    gap: 10px;
 }
 
 .name-box {
