--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+*, *::before, *::after {
+    box-sizing: border-box;     
+}
+
 html {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
-    height: 100vh;
-    width: 100vw;
 }
 
 body {
@@ -22,8 +24,9 @@ body {
     background-image: url(table-black-jack.png);
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: 7em;
-    padding-bottom: 8em;
+    width: 600px;
+    padding-top: 5em;
+    padding-bottom: 6em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,7 +46,7 @@ body {
 h1 {
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 5rem;
+    font-size: 3rem;
     color: goldenrod;
     line-height: 2em;
     padding: 0;
@@ -51,7 +54,7 @@ h1 {
 }
 
 p {
-    font-size: 3rem;
+    font-size: 1.5rem;
 }
 
 #player-el #sum-el {
@@ -69,14 +72,14 @@ p {
 
 button {
     color: white;
-    padding: 20px 30px;
-    width: 400px;
     border-radius: 10px;
-    font-size: 2rem;
     background-color: goldenrod;
     box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.8);
     font-weight: bold;
     border: none;
+    padding: 10px 20px;
+    width: 300px;
+    font-size: 1.5rem;
 }
 
 /* NAME BOX */
@@ -127,23 +130,6 @@ button {
 
 /* TABLETS and above */
 
-/* @media screen and (min-width: 768px) {
-    .cards-el-div {
-        width: 600px;
-        padding-top: 5em;
-    }
-
-    h1 {
-        font-size: 3rem;
-    }
-
-    p {
-        font-size: 1.5rem;
-    }
-
-    button {
-        padding: 10px 20px;
-        width: 300px;
-        font-size: 1.5rem;
-    }
-} */
+@media screen and (max-width: 768px) {
+    
+}
